Fixed overflow issue in main container.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -58,12 +58,12 @@ h6 {
 #__next {
   isolation: isolate;
   height: 100%;
-  // overflow-y: auto;
 }
 
 .main {
-  flex: auto;
+  width: 100%;
   height: 100%;
+  overflow-y: auto;
 }
 
 .layout {
