--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -7,6 +7,7 @@
   color: $color-gray;
   font-size: 1.6rem;
   // padding: 0 0.8rem;
+  z-index: 100;
 
   &--minimized {
     width: 60px;
